--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,9 +3,9 @@
   "references": [{ "path": "./tsconfig.app.json" }, { "path": "./tsconfig.node.json" }],
   "compilerOptions": {
     "baseUrl": ".",
-    "paths": {
-      "@/*": ["./src/*"]
-    },
+  "paths": {
+    "@/*": ["src/*"]
+  },
     "noImplicitAny": false,
     "noUnusedParameters": false,
     "skipLibCheck": true,
